force-app/main/default/objects/Apttus_Config2__CustomMessage__c/Apttus_Config2__CustomMessage__c.object-meta.xml
<CustomObject>
    <description>Used to provide translation for messages used in custom objects</description>
    <label>Custom Message</label>
    <nameField>
        <label>Custom Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>