force-app/main/default/objects/Apttus_Config2__CustomMessage__c/fields/Apttus_Config2__Message__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Message__c</fullName>
    <label>Message</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>