force-app/main/default/objects/Apttus_Config2__CustomMessage__c/fields/Apttus_Config2__Message_ja__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Message_ja__c</fullName>
    <label>Message_ja</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>