force-app/main/default/objects/Apttus_Config2__CustomMessage__c/fields/Apttus_Config2__MessageTag__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MessageTag__c</fullName>
    <label>Message Tag</label>
    <length>128</length>
    <type>Text</type>
</CustomField>