force-app/main/default/objects/Apttus_Config2__CustomMessage__c/fields/Apttus_Config2__SourceObjectId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SourceObjectId__c</fullName>
    <label>Source Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>